--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <img src="images/HTML5.png" alt="Ава" width="200">
+    <img src="HTML5.png" alt="Ава" width="200">
     
     <h1>Алина</h1>
 
